--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -37,7 +37,7 @@
                                     </div>
                                     <ngx-doc-viewer
                                      url= {{selectedFile}}
-                                     viewer="office" style="width:100%;height:80vh;">
+                                     viewer={{fileType}} style="width:100%;height:80vh;">
                                     </ngx-doc-viewer>
                                     <!--end: Search Form -->
                                 </div>
@@ -205,7 +205,7 @@
                                         <ng-uppy [config]="settings" (uploadResult)="fileUploadedResponse($event)">
                                         </ng-uppy>
                                         <div *ngFor="let item of attachments" class="attachments_section">
-                                            <a  (click)="selectedFileToView(item.attachmentUrl)" data-toggle="modal"
+                                            <a  (click)="selectedFileToView(item.attachmentUrl,item.attachmentExtension)" data-toggle="modal"
                                             data-target="#kt_modal_KTDatatable_local" class="attachement_btn">
                                                 <img src="../../../../assets/media/files/{{item.attachmentExtension}}">
                                                 <span>{{item.attachmentName}}</span>
