--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -115,6 +115,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <label *ngIf="reconcilliationMessage" >Setting of linked account is done in the Accrued Amount account</label>
                                     </div>
 
                                     <div class="col-md-6">
