--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -46,7 +46,7 @@
                                         <h5 class="modal-title" id="exampleModalLongTitle">
                                             <!--Place model title here-->
                                         </h5>
-                                        <button type="button" class="close" (click)="onClose()"data-dismiss="modal" aria-label="Close">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         </button>
                                     </div>
                                     <div class="modal-body upload-body">
@@ -67,7 +67,7 @@
                                                      <div class="form-group col-xl-3" style="height: 40px !important;">
                                                          <div class="month-calender">
                                                             <form class="input-arrow">
-                                                                <input [(ngModel)]="selectedDate" (focusout)="checkMonth()" (ngModelChange)="checkMonthActiveorNot($event)" required="required"
+                                                                <input [(ngModel)]="selectedDate"  (ngModelChange)="checkMonthActiveorNot($event)" required="required"
                                                                 autocomplete="off" class="form-control" name="date" bsDatepicker 
                                                                     placeholder="Select Month" class="form-control" name="date"
                                                                     bsDatepicker
