--- a/angular/src/app/admin/users/invite-user-modal.component.html
+++ b/angular/src/app/admin/users/invite-user-modal.component.html
@@ -53,10 +53,10 @@
                                 <label for="Title">Title</label>
                                 <input id="Title" type="text" name="Title" class="form-control" autocomplete="off" [(ngModel)]="user.title" >
                             </div>
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label for="Title">Reporting Relationship</label>
                                 <input id="ReportingRelationship" type="text" name="ReportingRelationship" class="form-control" autocomplete="off" [(ngModel)]="user.reportingRelationship" >
-                            </div>
+                            </div> -->
                            
                         </tab>
                         <tab heading="{{'Roles' | localize}}">
