ToolTip for Assignee

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -420,7 +420,7 @@
                                             <span class="">{{item.reconciliationType}}</span>
                                         </td>
 
-                                        <td class="assignee-cell">
+                                        <td class="assignee-cell" style="cursor: pointer;" data-toggle="tooltip" title="Chenge Assignee">
                                             <div *ngIf="item.id != rowid" class="kt-user-card-v2"
                                                 (click)="openFieldUpdateAssignee(item.id)">
                                                 <div class="kt-user-card-v2__pic">
@@ -481,7 +481,7 @@
                                                 <li  class="assignee-cell collapsable-cell kt-user-card-v2">
                                                     <div class="thead-box"><b>{{"Assignee" | localize}} : </b></div>
                                                     <div *ngIf="item.id != rowid"
-                                                        (click)="openFieldUpdateAssignee(item.id)" class="tdata-box">
+                                                        (click)="openFieldUpdateAssignee(item.id)" class="tdata-box" style="cursor: pointer;" data-toggle="tooltip" title="Chenge Assignee">
                                                         <div class="kt-user-card-v2__pic">
                                                             <div *ngIf="item.profilePicture"
                                                                 class="kt-badge kt-badge--xl">
