--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -77,7 +77,7 @@
                                             </button>
                                         </div>
                                         <div class="modal-body upload-body">
-                                            <div class="form-group py-0 my-0">
+                                            <!-- <div class="form-group py-0 my-0">
                                                 <div class="kt-radio py-0 my-0">
                                                     <label class="kt-radio kt-radio--tick kt-radio--success mx-4">
                                                         <input type="radio" name="radio" checked value="Upload Trial Balance" (change)="onBreadChange($event.target.value)"> {{"Upload Trial Balance" | localize}}
@@ -88,7 +88,7 @@
                                                         <span></span>
                                                     </label>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <div class="drag_drop_box uppy-modal-box1">
 
                                                 <p *ngIf="balance">{{"Upload Trial Balance" | localize}}</p>
