--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -14,29 +14,31 @@
                 <div class="kt-portlet__body">
                     <div class="kt-grid__item ">
                         <div class="itemized-head">
-                            <div class="d-flex flex-wrap justify-content-between align-items-center py-3">
-                                <div class="d-flex flex-wrap align-items-center">
+                            <div class="d-flex justify-content-between align-items-center py-3">
+                                <div class="d-flex align-items-center">
                                     <h3 class="mr-3 mb-0">
                                         <span>{{"Amortized List" | localize}}</span>
                                     </h3>
                                     <h6 class="ml-3 mb-0 form-group">
                                         <label>{{"Acc No" | localize}}</label>
                                         <span class="bg-lightgrey badge badge-secondary bagesTextColor">{{accountNo}}</span>
+                                    </h6>
+                                    <h6 class="ml-3 mb-0 form-group">
                                         <label>{{"Acc Name" | localize}}</label>
                                         <span class="bg-lightgrey badge badge-secondary bagesTextColor">{{accountName}}</span>
+                                    </h6>
+                                    <h6 class="ml-3 mb-0 form-group">
                                         <label *ngIf="linkAccountCheck" >{{"Link Acc Name" | localize}}</label>
                                         <span *ngIf="linkAccountCheck" class="bg-lightgrey badge badge-secondary bagesTextColor">{{linkedAccountName}}</span>
                                         
                                     </h6>
 
                                 </div>
-                                <div>
+                                <div class="d-flex flex-wrap align-items-center">
                                     <!-- <label class="switch"><input type="checkbox" [(checked)]="AllOrActive"  (change)="changeToggleValue()" ><div class="slider round"><span class="on">All</span><span class="off">Active</span></div></label> -->
                                 
                                 </div>
-                                <div class="kt-subheader__toolbar">
-                                    <div class="kt-subheader__wrapper">
-
+                                <div class="d-flex flex-wrap align-items-center">
                                         <button [ngClass]="{'disabled':!monthStatus}" class="btn btn-brand btn-width" (click)="RedirectToAddNewItem()"><i
                                             class="fa fa-plus"></i>
                                         {{"AddNew" | localize}}</button>
@@ -44,8 +46,6 @@
                                             <i class="la la-arrow-left"></i>
                                             {{"Back" | localize}}
                                         </a>
-
-                                    </div>
                                 </div>
                             </div>
                         </div>
