--- a/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
@@ -29,7 +29,37 @@
                     </div>
                 </div>
                 <div class="kt-portlet__body">
-
+                    <div id="kt_modal_KTDatatable_local" class="modal fade" role="dialog" aria-hidden="true">
+                        <div class="modal-dialog modal-xl">
+                            <div class="modal-content" style="min-height: 590px;">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">
+                                        File Preview 
+                                    </h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <!--begin: Search Form -->
+                                    <div class="kt-form px-1 kt-form--label-right kt-margin-t-7 kt-margin-b-10">
+                                    </div>
+                                    <ngx-doc-viewer
+                                     url= {{selectedFile}}
+                                     viewer={{fileType}} style="width:100%;height:80vh;">
+                                    </ngx-doc-viewer>
+                                    <!--end: Search Form -->
+                                </div>
+                              
+                                <div class="modal-footer kt-hidden">
+                                    <button type="button" class="btn btn-clean btn-width btn-bold btn-upper btn-font-md"
+                                        data-dismiss="modal">Close</button>
+                                    <button type="button"
+                                        class="btn btn-default btn-bold btn-upper btn-width btn-font-md">Submit</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="record-card-body p-4">
                         <div class="row">
                             <div class="col-md-6">
@@ -147,8 +177,9 @@
                                     <ng-uppy [config]="settings" (uploadResult)="fileUploadedResponse($event)">
                                     </ng-uppy>
                                     <div *ngFor="let item of attachments" class="attachments_section">
-                                        <a href="{{item.attachmentUrl}}" target="_blank" class="attachement_btn"
-                                            download="{{item.attachmentUrl}}">
+                                        <a (click)="selectedFileToView(item.attachmentUrl,item.attachmentExtension)" data-toggle="modal"
+                                        data-target="#kt_modal_KTDatatable_local"  class="attachement_btn"
+                                         >
                                             <img src="../../../../assets/media/files/{{item.attachmentExtension}}">
                                             <span>{{item.attachmentName}}</span>
                                         </a>
